# hdfs-comm-rs

./: Cargo.toml  README.md  build.rs
src/: block.rs  lib.rs  rpc.rs
