[package]
name = "hdfs-comm-rs"
version = "0.1.0"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
byteorder = "1"
bytes = "0.4"
comm = { git = "https://github.com/hamersaw/comm-rs" }
crc = "1.0"
crossbeam-channel = "0.3"
log = "0.4"
prost = "0.5"
rand = "0.6"

[build-dependencies]
prost-build = "0.5"
